# eeg-seizure-detection

./: .gitignore  CITATION.md  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  test.py
docs/: FAQ.md  INTERVIEW_FAQ.md  ROADMAP.md
docs/showcase/: README.md
infra/: README.md  bootstrap-userdata.sh  configure-remote-credentials.ps1  deploy-via-s3.ps1  fix_torch_patch.py  instance-state.json  provision.ps1  push-credentials-and-restart.ps1  push-credentials-only.ps1  push_code_to_instance.py  setup-on-instance.sh  setup-remote.sh  sitecustomize.py  start-fullscale-remote.sh  sync-to-instance.ps1  upload-archive-role.sh  watch-credentials.ps1
notebooks/: 01_project_walkthrough.ipynb  02_detection_results.ipynb  03_clinical_reality_check.ipynb  README.md
scripts/: README.md  compute_record_stats.py  downloader_100gb.py  ensemble_equal.py  ensemble_sweep.py  forecast_chance_baselines.py  make_showcase_assets.py  rigorous_eval.py  score_max_smooth.py  spectral_baseline.py  validate_dataset.py
scripts/pipeline/: __init__.py  artifacts.py  awscli.py  config.py  download.py  fullscale.py  index_annotations.py  manifest.py  metadata.py  selection.py
src/seizure_detector/: __init__.py  audit.py  cache.py  cli.py  config.py  dashboard.py  dataset.py  engine.py  (+10 more)
tests/: test_app.py  test_awscli_cp.py  test_cache_safety.py  test_edf_header.py  test_forecast.py  test_fullscale.py  test_labels.py  test_metrics_dashboard.py  test_preprocess_and_model.py  test_prg_and_events.py  test_smoothing.py  test_splits_and_windows.py  test_training_options.py
(+15 files in other folders)
