[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurotech-seizure-detector"
version = "0.2.0"
description = "Seizure-marker-proximity detection on the BDSP Neurotech EEG corpus (Kush Patel)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kush Patel", email = "patelskush@gmail.com" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "pyarrow>=14",
  "mne>=1.6",
  "torch>=2.1",
  "streamlit>=1.35",
  "plotly>=5.20",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]
notebooks = [
  "jupyter>=1.0",
  "ipykernel>=6.0",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
]

[project.scripts]
seizure-detector = "seizure_detector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
